[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gdown>=5.2.0",
    "ipython>=9.9.0",
    "kaggle>=1.8.3",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "pytorch-gradcam>=0.2.1",
    "requests>=2.32.5",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.ruff]
target-version = "py311"
line-length = 79
exclude = [".venv", "__pycache__", "docs", "build", "dist"]

[tool.ruff.lint]
# 有効にするルール
# E, F: flake8のエラー
# I: import順
# N: 命名規則
select = ["E", "F", "I", "N"]
ignore = ["E402", "E501"]  # E402: モジュールレベルのインポートはファイルの先頭に, E501: 行が長すぎる

# 自動整形の設定
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
